Added code to complete the first test

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,15 @@ LAB3/LAB3BankAccounts/.project
 LAB3/LAB3BankAccounts/doc/
 
 HABITATLAB-5-6/.metadata/
+/.metadata/
+
+DefensiveProgrammingStudents/.classpath
+
+DefensiveProgrammingStudents/.DS_Store
+
+
+DefensiveProgrammingStudents/.project
+
+DefensiveProgrammingStudents/src/.DS_Store
+
+DefensiveProgrammingStudents/src/com/.DS_Store
